--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 @import url(font-awesome.min.css);
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
-
+@font-face {
+  font-family: 'meera';
+  font-style: normal;
+  font-weight: 400;
+  src: url('meera.ttf') format('ttf');
+}
 /*
 	Alpha by HTML5 UP
 	html5up.net | @n33co
@@ -1627,3 +1632,92 @@
 		#cta .formerize-placeholder {
 			color: rgba(255, 255, 255, 0.75) !important;
 		}
+/* PHP Display related Styles*/
+
+.titlespan {
+	font-family:'meera';
+	font-size:1.32em;
+}
+.titlespan a{
+	color: #e89980;
+	text-decoration:none;
+	
+}
+.titlespan a:Hover{
+	color: #7fcdb8;
+	border-bottom: dotted 1px;
+}
+.featurespan {
+	color: #3D3D3D;
+	font-family:'meera';
+	font-size:1.32em;
+}
+.featurespan a{
+	color: #3D3D3D;
+	text-decoration:none;
+}
+.featurespan a:Hover{
+	color: #7fcdb8;
+	border-bottom: dotted 1px;
+}
+.authorspan {
+	color: #90b0ba; 
+	font-family:'meera';
+	font-size:1.32em;
+}
+.authorspan a{
+	color: #90b0ba;
+	text-decoration:none;
+}
+.authorspan a:Hover{
+	color: #7fcdb8;
+	border-bottom: dotted 1px;
+}
+.yearspan {
+	color: #555555;
+	font-family:'meera';
+	font-size:1.2em;
+	white-space: nowrap;
+}
+.yearspan a{
+	color: #555555;
+	text-decoration:none;
+	font-family: "Source Sans Pro", sans-serif;
+}
+.yearspan a:Hover{
+	color: #7fcdb8;
+	border-bottom: dotted 1px;
+}
+.page_title {
+	color: #1c3750;
+	font-size:1.32em;
+	font-weight:400;
+}
+.alphabet {
+	width:100%vw;
+	clear: both;
+	text-align: center;
+	padding-bottom: 2em;
+	font-family:'meera';
+	
+}
+.alphabet .letter {
+	font-size: 1.5em;
+	color: #3D3D3D;
+	padding: 0 0 0 0.75em;
+}
+.alphabet .letter a{
+	font-size: 1em;
+	color: #3D3D3D;
+	color:#8B0000;
+	text-decoration:none;
+}
+.alphabet .letter a:Hover{
+	font-size: 1em;
+	color: #000000;
+}
+.archive_holder {
+	width: 75%vw;
+}
+
+		
