--- a/css/style-wide.css
+++ b/css/style-wide.css
@@ -1,17 +1,26 @@
-/*
-	Alpha by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 /* Basic */
 
 	body, input, select, textarea {
-		font-size: 13pt;
+		font-size: 12pt;
 	}
 
 /* Banner */
 
+/*
 	#banner {
 		padding: 10em 0 18em 0;
 	}
+*/
+	#banner {
+		background-attachment: scroll,							fixed;
+		background-color: #666;
+		background-image: url("images/vivek.png"), url("../images/banner.jpg");
+		background-position: top,						center center;
+		background-repeat: no-repeat,							no-repeat;
+		background-size: 70%,							cover;
+		color: #fff;
+		padding: 12em 0 18em 0;
+		text-align: center;
+	}
+
+		
