--- a/css/style.css
+++ b/css/style.css
@@ -936,6 +936,9 @@
 		text-decoration: none;
 		white-space: nowrap;
 	}
+	
+	
+	
 
 		input[type="submit"]:hover,
 		input[type="reset"]:hover,
@@ -998,8 +1001,13 @@
 		.button.alt {
 			background-color: transparent;
 			box-shadow: inset 0 0 0 2px #e5e5e5;
+			width:13em;
 			color: #777;
 		}
+		.button.alt a {
+			color:#777;
+		}
+		
 
 			input[type="submit"].alt:hover,
 			input[type="reset"].alt:hover,
@@ -1311,7 +1319,7 @@
 	#banner {
 		background-attachment: scroll,							fixed;
 		background-color: #666;
-		background-image: url("images/vivek.png"), url("../images/banner.jpg");
+		background-image: url("../images/vivek.png"), url("../../images/banner.jpg");
 		background-position: top,						center center;
 		background-repeat: no-repeat,							no-repeat;
 		background-size: 70%,							cover;
@@ -1748,6 +1756,7 @@
 .authorspan a{
 	color: #90b0ba;
 	text-decoration:none;
+	
 }
 .authorspan a:Hover{
 	color: #7fcdb8;
