Commit No.14 - Re referencing the links in the new structure

--- a/php/css/component.css
+++ b/php/css/component.css
@@ -1,3 +1,18 @@
+Skip to content
+ This repository
+Explore
+Gist
+Blog
+Help
+ananthmysore ananthmysore
+ 
+3  Unwatch 
+  Star 0
+ Fork 0SrirangaDigital/prabuddha-keralam
+ tree: bc70a34c82  prabuddha-keralam/php/months/css/component.css
+ananthmysoreananthmysore an hour ago Commit No.9 - Changes Before burning into DVD
+1 contributor
+Executable File  523 lines (429 sloc)  11.874 kb RawBlameHistory  
 @font-face {
 	font-family: 'icomoon';
 	src: url('../fonts/icomoon.eot');
@@ -520,3 +535,5 @@ a, button {
 	}
 }
 
+Status API Training Shop Blog About
+© 2015 GitHub, Inc. Terms Privacy Security Contact
